tests/diagnostics/match_on_non_enum.kal
# match requires an enum; the scrutinee here is an integer.
match 5 { _ => 0 };
